--- a/style.css
+++ b/style.css
@@ -1,18 +1,16 @@
 canvas {
     animation-name: name;
-    animation-duration: 6s;
+    animation-duration: 4s;
     animation-iteration-count: infinite;
 }
     @keyframes name {
  from {box-shadow: 1px 1px 38px red;} 
  
  to {box-shadow: 1px 1px 38px yellow;}
-
- to{box-shadow: 1px 1px 38px blue;}
 }
 
 .btn-success:hover{
-background-color: darkgreen;
+background-color: teal;
 }
 
 h3{
